<resources>
    <string name="app_name">CocoDiag</string>

    <string name="fullname">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="password_text">Password</string>
    <string name="password_confirm_text">Confirm Password</string>

    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_title_loading">Sign In...</string>
    <string name="sign_in_message">Welcome back,</string>
    <string name="sign_in_sub_message">Please use your email address and password!</string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="sign_in_text">Or Sign In with</string>
    <string name="sign_in_with_google">Sign In with Google</string>

    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_title_loading">Sign Up...</string>
    <string name="sign_up_message">Welcome</string>
    <string name="sign_up_sub_message">Please fill all to create account!</string>
    <string name="sign_up_text">Or Sign Up with</string>

    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_sub_message">We will send email for your reset password!</string>
    <string name="submit_text">Submit\n</string>

    <string name="type_your_password">Type your password</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="type_your_full_name">Type your full name</string>

    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="forum">Forum</string>
    <string name="setting">Setting</string>

    <string name="title_main">CocoDiag</string>
    <string name="sub_title_main">Detect Your Coconut Plant Diseases</string>
    <string name="article">Article</string>
    <string name="gambar_1">Gambar 1</string>
    <string name="gambar_2">Gambar 2</string>

    <string name="class_screen_title">Classification Result</string>
    <string name="class_screen_subtitle">Your image has been classified</string>
    <string name="class_prediction">Label Class : 90%</string>
    <string name="post_text">Post</string>
    <string name="next_text">Next</string>
    <string name="retake_text">Retake</string>
    <string name="care_instructions_title">Care Instructions</string>
    <string name="care_instructions_subtitle">Your coconut plant diseases</string>

    <string name="forum_title">Forum</string>
    <string name="forum_subtitle">Share your experience</string>
    <string name="tv_name">John Doe</string>
    <string name="tv_email">johndoe@gmail.com</string>
    <string name="tv_status">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="profile_name">John Doe</string>
    <string name="account_settings">Account Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="forum_add_posting">Add Posting</string>
    <string name="forum_post_created_at">Created at:</string>


    <string name="reason_title">Reason</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="save_loading">Save...</string>
    <string name="info_text">Info</string>
    <string name="disease_name">Disease Name</string>
    <string name="image_article">Image Article</string>
    <string name="new_post_message">What\'s happening?</string>
    <string name="post">Post</string>
    <string name="upload">Upload</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="splash_scan">Scan and Protect! \n
Instantly Identify Coconut Plant Diseases with Our Advanced Scanning Feature.</string>
    <string name="splash_article">Unlock Coconut Secrets! \n
Enhance Your Knowledge with Our Well-Researched Coconut Articles.</string>
    <string name="splash_forum">Join the Discussion! \n
Engage with Experts and Peers in Our Coconut Farming Forum.</string>

    <string name="disease_bud_root_dropping">Bud Rot Dropping</string>
    <string name="disease_bud_rot">Bud Rot</string>
    <string name="disease_gray_leaf_spot">Gray Leaf Spot</string>
    <string name="disease_stem_bleeding">Stem Bleeding</string>
    <string name="disease_leaf_root_rot">Leaf Rot</string>
    <string name="history_screen_title">History</string>
    <string name="history_screen_subtitle">Your classification records</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="comment_post_created_at">Created At:</string>
    <string name="delete">Delete</string>
    <string name="your_classification_result">Your Classification Result</string>
</resources>