<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.signin.SignInActivity"
    android:background="@drawable/withvector"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-24dp"
        app:cardCornerRadius="@dimen/_24sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_transition_signin"
                android:transitionName="field_transition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_28ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/sign_in_sub_message"
                    android:textSize="@dimen/_11sdp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/email_address"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_30"
                        android:drawablePadding="@dimen/_4sdp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/password_text"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_30"
                        android:drawablePadding="@dimen/_4sdp"
                        android:drawableTint="@color/black"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/type_your_password"
                        android:text="@string/sign_in_forgot_password" />

                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_8sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/sign_in_title"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_10sdp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_8sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.7"
                    android:text="@string/sign_in_text" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_8sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_google"
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/ic_google"
                        android:contentDescription="@string/sign_in_with_google" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:drawableRight="@drawable/ic_arrow_right_30"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_40sdp"
                    android:text="@string/sign_up_title"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:transitionName="tv_transition"/>
            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>