<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@android:color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_7sdp">

        <ImageView
            android:id="@+id/img_article"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_article"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@id/title_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:maxLines="1"
            android:text="@string/article"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_article"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:maxLines="3"
            android:text="@string/sub_title_main"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toEndOf="@id/img_article"
            app:layout_constraintTop_toBottomOf="@id/title_article" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>