<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.forum.ForumAddActivity">

    <TextView
        android:id="@+id/tv_sc_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/forum_title"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_sc_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sc_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/forum_subtitle"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sc_title" />

    <EditText
        android:id="@+id/et_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@null"
        android:gravity="top"
        android:hint="@string/new_post_message"
        android:inputType="textMultiLine"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sc_subtitle" />

    <ImageView
        android:id="@+id/iv_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:src="@drawable/ic_place_holder"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_post_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_img_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/upload"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_gallery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/post"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/_8sdp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:activeIndicatorLabelPadding="@dimen/_5sdp"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:itemIconSize="@dimen/_20sdp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>